--- a/Settings.yaml
+++ b/Settings.yaml
@@ -27,10 +27,9 @@ MaximumLengthRSScriptContainer: 'Folder' # In case the source of a script is too
 ExportFromVSCMaximumLength    : false    # If a file's source length is over `MaximumRSScriptLength`, it won't be exported to Roblox Studio. Otherwise, when the files are imported back, they will naturally be separated into several modules called `{OriginalName}_{i} where i is the index of separation with a padded zero (00, 01, 02, ...).
 ExportFromRSDuplicated        : true     # In Roblox Studio, two files can be equally named within the same folder, yet that's typically not the case in the user's OS. If true, the exported will be called `{OriginalName}-{i}` where i is the index of duplication with a padded zero (00, 01, 02, ...).
 ExportFromRSDataChunkSize     : 819200   # Roblox Studio's HTTPService's POST Requests are limited to 1MB of data; this number represents 800KB (800 * 1,024) and is cautiously set in order to avoid errors. Can attempt to increase it.
-ExportFromRSPropertyBlacklist :          # By default, `Name`, `Parent` and `Disabled` properties of instances within Roblox Studio won't be exported to avoid redundancy and as an attempt to keep bytesizes as small as possible.
-  - 'Name'
+ExportFromRSPropertyBlacklist :          # By default, `Parent` and `Disabled` properties of instances within Roblox Studio won't be exported to avoid redundancy and as an attempt to keep bytesizes as small as possible.
   - 'Parent'
-  - 'Disabled'                           # There's already `Enabled`.
+  - 'Disabled'                           # There's already `Enabled`. 
 
 StatusHeader                  :
   Request-Type: GETStatus
